v0.43:
	Fixed string formatting forgotten when changing all money handling to real numbers.
v0.44:
	Uncommented out switch permissions left in from debugging.
	Added option to force PvP everywhere. 
v0.45:
	Moved the check for forcing pvp to after it makes sure the world is in use with towny.
	Possible efficiency boost with determining Town levels.
	Fixed error in first run town-levels.csv
	Fixed loading of levels configs.
	Stopped forcing respawn events to use world spawn if town spawn isn't found.
	Added option to skip town respawn.
	Changelog is displayed in console during an update.
	Added a ton of debug statements to the daily timer, as well as an option to turn it off.
v0.46:
	There is now an option to set the minimum distance between another town's homeblocks (default is 0 ie no change).
	Fixed a concurrent modification bug with unclaiming all townblocks in a town.
	Mob removal now runs in the game thread (possible slow down, increase MOB_REMOVAL_SPEED variable in config if you find a new slowdown after updating).
	Added torches (id=50) to wild ignore ids default.
	Modified the onDamage call.
v0.47:
	Changed the debug output for when permissions are checked against as it might be causing confusiong.
	Quick fix for /tc and /nc with no msg.
	Town/Nation chat is sent to the console.
	Ingame Resident/Town/Nation/Global messages are now sent to it's own log file. It's nature is to start a new log every time the plugin is enabled. However, the nature of the backup system will keep now keep the log of what went on during that time period.
	Compiled against Permissions 2.5, to see if it makes any difference.
	Added maximum plots per resident globally (default=1000). Anyone trying to claim more than this will get an error.
	Added default permissions for when a new town/resident is registered.
	Mayor/Assistant can now edit plots within the town, even if the plot owner denies everything.
	Fixed outsiderSwitch permission. (Thanks PixelEater)
	
	
	
	
	